Read only the conversations on the given page which is mention in PostBox PUT call
* Remove unused methods
* Rename some methods for clarity

Change-Id: I5f30ead0f381785312bcb4b5fe2629fe5e8861d9
Reviewed-on: https://gerrit.ecg.so/62023
Tested-by: Gerrit-At-Gitmaster001
Tested-by: Comaas Jenkins <DL-eCG-comaas-dev@ebay.com>
Reviewed-by: Claudio Pasquale Tagliola <ctagliola@ebay.com>
Reviewed-by: Peter Troshin <ptroshin@ebay.com>